--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": ">=5.3.7",
         "symfony/dependency-injection": "~2.2",
-        "symfony/doctrine-bundle": "~1.2"
+        "doctrine/doctrine-bundle": "~1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "~3.7.0"
